Rename example package

--- a/animasjoner/example/android/app/build.gradle
+++ b/animasjoner/example/android/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "no.sonat.animated_example"
+        applicationId "no.sonat.animations_example"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
