--- a/animasjoner/example/android/app/src/main/AndroidManifest.xml
+++ b/animasjoner/example/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="no.sonat.animated_example">
+    package="no.sonat.animations_example">
    <application
-        android:label="animated_example"
+        android:label="Animasjoner"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
