--- a/animasjoner/example/android/app/src/profile/AndroidManifest.xml
+++ b/animasjoner/example/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="no.sonat.animated_example">
+    package="no.sonat.animations_example">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
