--- a/animasjoner/example/linux/CMakeLists.txt
+++ b/animasjoner/example/linux/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
-set(BINARY_NAME "animated_example")
-set(APPLICATION_ID "no.sonat.animated_example")
+set(BINARY_NAME "animations_example")
+set(APPLICATION_ID "no.sonat.animations_example")
 
 cmake_policy(SET CMP0063 NEW)
 
