--- a/animasjoner/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/animasjoner/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,7 +5,7 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = animated_example
+PRODUCT_NAME = Animasjoner
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = no.sonat.animatedExample
