--- a/animasjoner/example/windows/CMakeLists.txt
+++ b/animasjoner/example/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
-project(animated_example LANGUAGES CXX)
+project(animations_example LANGUAGES CXX)
 
-set(BINARY_NAME "animated_example")
+set(BINARY_NAME "animations_example")
 
 cmake_policy(SET CMP0063 NEW)
 
