--- a/animasjoner/example/windows/runner/Runner.rc
+++ b/animasjoner/example/windows/runner/Runner.rc
@@ -92,10 +92,10 @@ BEGIN
             VALUE "CompanyName", "no.sonat" "\0"
             VALUE "FileDescription", "A new Flutter project." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "animated_example" "\0"
+            VALUE "InternalName", "animations_example" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2021 no.sonat. All rights reserved." "\0"
-            VALUE "OriginalFilename", "animated_example.exe" "\0"
-            VALUE "ProductName", "animated_example" "\0"
+            VALUE "OriginalFilename", "animations_example.exe" "\0"
+            VALUE "ProductName", "Animasjoner" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
